syntax = "proto3";

package user;

service UserService {
  rpc FindOne (UserById) returns (User) {}
  rpc AddMoney (AddMoneyRequest) returns (Reference) {}
}

message UserById {
  int32 id = 1;
}

message AddMoneyRequest {
  int32 id = 1;
  float amount = 2;
}

message User {
  int32 balance = 1;
}

message Reference {
  string reference_id = 1;
}